[tool.poetry]
name = "category"
version = "0.1.1"
description = "Python implementation of the Scala standard library."
license = "MIT"
authors = ["usabarashi"]
readme = "README.md"
repository = "https://github.com/usabarashi/python-category"
keywords = [
    "Scala",
    "Functional",
]
packages = [{include = "category", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
