[tool.poetry]
name = "pycategory"
version = "0.1.1"
description = "Python implementation of the Scala standard library."
license = "MIT"
authors = ["usabarashi"]
readme = "README.md"
repository = "https://github.com/usabarashi/pycategory"
keywords = [
    "Functional",
    "Scala",
]
packages = [{include = "category", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.275"
pyright = "^1.1.316"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 100

[tool.ruff]
select = ["E", "F"]
ignore = ["E721"]
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = ["F841"]
line-length = 100
target-version = "py310"
