[tool.poetry]
name = "pycategory"
version = "0.1.2"
description = ""
license = "MIT"
authors = ["usabarashi"]
readme = "README.md"
repository = "https://github.com/usabarashi/pycategory"
keywords = [
    "Functional",
    "Scala",
]
packages = [{include = "pycategory", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
pyright = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 100

[tool.ruff]
lint.select = ["E", "F"]
lint.ignore = ["E721"]
lint.fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
lint.unfixable = ["F841"]
line-length = 100
target-version = "py312"
